Add resize functionality for youtube embed AND footer shapes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <link rel="icon" href="resources/graphics/logo.png">
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -17,6 +19,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
     <title>SteveProjects</title>
 </head>
@@ -32,6 +35,9 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <a class="language-flag" href="#" title="switch to this language"><img src="resources/graphics/ger.png"
+                        width="45px"></a>
 
                 <div id="navbarResponsive" class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
@@ -62,16 +68,18 @@
             <div id="titleContainer" class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>Hi, i'm Steve & a newbie Webdesigner</h1>
-                        <p>Now what exactly do I do?</p>
+                        <h1>Hi, I'm Steve & I'm a web developer</h1>
+                        <p>I'm am one of those undesisive creatures trying to make a living out of what I love.</p>
                         <a href="#overview" class="enable-animation btn-an btn-1"> <svg class="enable-animation">
                                 <rect x="0" y="0" fill="none" width="100%" height="100%" />
-                            </svg>Discover</a>
+                            </svg>Show Overview</a>
                         <div class="social-links">
+                            <h2>Social links</h2>
                             <a href="https://www.instagram.com/steve96.music"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.youtube.com/c/steffenem"><i class="fab fa-youtube"></i></a>
                             <a href="https://github.com/steffen-most"><i class="fab fa-github"></i></a>
                             <a href="mailto:steffen.most@gmx.de"><i class="fas fa-envelope"></i></a>
+                            <a href="https://www.xing.com/profile/Steffen_Most2/cv"><i class="fab fa-xing"></i></a>
                         </div>
                     </div>
                 </div>
@@ -151,18 +159,22 @@
             </div>
         </div>
 
-        <div id="projects" class="container-fluid mt-5">
+        <div id="contentCreation" class="container-fluid mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <h3>Music</h3>
+                    <div class="col px-0">
+                        <h2>Content Creation</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, facere. Quo quibusdam quam
+                            asperiores. Ea, dignissimos ullam repellendus unde asperiores odit, cumque eos nostrum
+                            delectus reiciendis modi consectetur minima animi distinctio molestias, et ipsa. Natus et
+                            quam obcaecati libero, consectetur facilis neque exercitationem ipsum sed, expedita
+                            excepturi autem? Sequi, hic.</p>
                     </div>
                 </div>
-            </div>
 
-            <div id="contentCreation" class="container mt-5">
                 <div class="row">
-                    <div class="col px-0">
+                    <div class="col">
+                        <h3>Music Projects</h3>
                         <iframe id="youtube" width="100%" height="315"
                             src="https://www.youtube.com/embed/1hHWomZgUcs?start=165" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -170,12 +182,16 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="row">
+                        <h2>Photography</h2>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- Contact -->
-        <div id="contact" class="container mt-5" data-aos="fade-right">
-            <hr>
+        <div id="contact" class="container mt-5 pt-3" data-aos="fade-right">
             <div class="row">
                 <div class="col-12 col-md-7 col-lg-8">
                     <h2>Contact me</h2>
@@ -200,8 +216,14 @@
         </div>
     </main>
 
-    <footer>
-        <div class="container">
+    <footer class="position-relative">
+        <img src="resources/graphics/bow.png" class="img-fluid">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <h2>Footer</h2>
+                </div>
+            </div>
             <div class="row">
                 <div class="col">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ab repellendus delectus culpa iste
