Add Impressum to footer section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             </div>
         </div>
 
+        <!-- Content Creation -->
         <div id="contentCreation" class="container-fluid mt-5">
             <div class="container">
                 <div class="row">
@@ -218,30 +219,29 @@
 
     <footer class="position-relative">
         <img src="resources/graphics/bow.png" class="img-fluid">
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col">
-                    <h2>Footer</h2>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-6">
+                    <h2>Impressum</h2>
+                </div>
+                <div class="col-6 text-right">
+                    <img src="resources/graphics/logo.png" width="70px" class="img-fluid" alt="logo">
                 </div>
             </div>
+        </div> 
+        <div id="impressum" class="container">
             <div class="row">
                 <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ab repellendus delectus culpa iste
-                        quam, at atque nam alias, ex adipisci magni! Illum necessitatibus enim possimus quia rem
-                        voluptates earum aut dolorum debitis vel soluta dignissimos vero pariatur veritatis ad,
-                        cupiditate expedita iure praesentium? Dicta sapiente molestias doloremque facere pariatur eos
-                        qui sed ipsam, velit nobis aperiam magni quis voluptate excepturi aliquid consequatur ad sequi.
-                        Soluta explicabo voluptatum ratione odio sequi quia sed reprehenderit consequuntur doloremque
-                        nam eaque, placeat hic eligendi laboriosam libero distinctio suscipit quos unde repellendus
-                        ullam est impedit! Quaerat, sint cum, magnam repellendus rem nulla sapiente eaque, neque
-                        blanditiis dolores at placeat exercitationem odio. Id, deleniti autem. Totam natus incidunt
-                        illum blanditiis recusandae nostrum in ipsum magnam, nesciunt tempora odio culpa dicta error
-                        enim a excepturi! Omnis, sequi nulla illum fugit dolor corporis consequuntur enim nemo vel
-                        necessitatibus tempore velit vitae et facere hic quia minus commodi voluptatem distinctio
-                        libero! Adipisci blanditiis quia veniam nulla expedita laborum ullam vero, debitis officia nobis
-                        quis, consectetur amet in incidunt itaque corrupti quos officiis, doloremque porro quod
-                        recusandae quas ducimus qui illum? Dolores aliquam repellat exercitationem nihil eum ducimus eos
-                        cum et, explicabo illum nisi. Odio eaque harum expedita quisquam.</p>
+                    <dl>
+                        <dt>Autor</dt>
+                        <dd>Steffen Most</dd>
+                        <dt>Straße</dt>
+                        <dd>Dorneystraße 41</dd>
+                        <dt>Ort</dt>
+                        <dd>58454 Witten, Deutschland (Germany)</dd>
+                        <dt>Mail</dt>
+                        <dd>steffen.most@gmx.de</dd>
+                    </dl> 
                 </div>
             </div>
         </div>
