--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <link rel="icon" href="resources/graphics/logo.png">
 
     <!-- External Stylesheets -->
@@ -59,7 +59,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#about">About Me</a>
                         </li>
                     </ul>
                 </div>
@@ -127,7 +127,8 @@
                     <div class="text-content">
                         <div>
                             <h3 class="enable-animation">Content Creation</h3>
-                            <a href="#" class="enable-animation btn-an btn-1 mt-2"> <svg class="enable-animation">
+                            <a id="contentCreationBt" href="#contentCreation"
+                                class="enable-animation btn-an btn-1 mt-2"> <svg class="enable-animation">
                                     <rect x="0" y="0" fill="none" width="100%" height="100%" />
                                 </svg>Discover</a>
                         </div>
@@ -159,11 +160,12 @@
             </div>
         </div>
 
-        <!-- Content Creation -->
-        <div id="contentCreation" class="container-fluid mt-5">
+        <!-- Content Creation Preview -->
+        <section id="contentCreation" class="mt-5 preview-box">
+            <a href="#" class="enable-animation btn-an btn-3">Zurück</a>
             <div class="container">
                 <div class="row">
-                    <div class="col px-0">
+                    <div class="col-11 px-0">
                         <h2>Content Creation</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, facere. Quo quibusdam quam
                             asperiores. Ea, dignissimos ullam repellendus unde asperiores odit, cumque eos nostrum
@@ -174,7 +176,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-11 px-0">
                         <h3>Music Projects</h3>
                         <iframe id="youtube" width="100%" height="315"
                             src="https://www.youtube.com/embed/1hHWomZgUcs?start=165" frameborder="0"
@@ -189,15 +191,25 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <!-- Contact -->
-        <div id="contact" class="container mt-5 pt-3" data-aos="fade-right">
+        <!-- Web Dev Blog Preview -->
+        <section id="webDevBlog" class="mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="offset-1 col-10">
+                        <h2>Web Development Blog</h2>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About -->
+        <div id="about" class="container mt-5 pt-3" data-aos="fade-right">
             <div class="row">
-                <div class="col-12 col-md-7 col-lg-8">
-                    <h2>Contact me</h2>
-                    <p>Send me an email</p>
-
+                <div class="col-12 col-md-7 col-lg-8" >
+                    <h2>About Me</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum consequatur dolor voluptatibus
                         repellat sunt laborum cumque natus earum eaque accusantium excepturi quos amet, ipsum
                         repellendus maxime facere laboriosam possimus asperiores, laudantium dolorum sint! Aperiam
@@ -207,11 +219,67 @@
                         quisquam blanditiis. Laborum quia soluta nobis aut exercitationem eaque ipsa eius magni
                         cupiditate officia incidunt, dolor iste perferendis eveniet adipisci ad deserunt nesciunt
                         recusandae minus modi. Sequi, nisi perspiciatis.</p>
-
-
                 </div>
                 <div class="col-12 col-md-5 col-lg-4 my-auto">
                     <img src="resources/images/profile.jpg" class="border-rounded img-fluid">
+                </div>
+            </div>
+            <div class="row">
+                <div class="offset-1 col-10">
+                    <hr>
+                    <h3 class="text-center">My Path</h3>
+                    <p class="text-center">"Where I've come from & where I'm going"</p>
+                    <ul id="vita">
+                        <li>
+                            <dl>
+                                <dt>Working as Web Developer besides my study</dt>
+                                <dd>since Nov 2019</dd>
+                            </dl>
+                            <p>Since I've been a part of my home towns agency for communication and design <a
+                                    href="https://www.meap.de/"
+                                    title="follow this link to get to the company's home page">Meap</a> I've improved
+                                my SASS skills and structure. Additionally, I've started understanding the basics of php
+                                and how to use it in order to build a wordpress based webpage.</p>
+                        </li>
+                        <li data-aos="fade">
+                            <dl>
+                                <dt>Trainee as a Java Software Developer</dt>
+                                <dd>Mar 2019 - Aug 2019</dd>
+                            </dl>
+                            <p>Right before my bachelor thesis my university offered me a chance to do a practical
+                                semester by a company of my choice.</p>
+                        </li>
+                        <li data-aos="fade">
+                            <dl>
+                                <dt>Studying computer science and economics (B. Sc.)</dt>
+                                <dd>since August 2019</dd>
+                            </dl>
+                            <p>Study contents: Economics, Java Development, Software Construction, Web Development,
+                                Marketing, (Cost) Accounting, Project Management</p>
+                        </li>
+                        <li data-aos="fade">
+                            <dl>
+                                <dt>Studying computer science (B. Sc.)</dt>
+                                <dd>Aug 2015 - Aug 2016</dd>
+                            </dl>
+                            <p>I did study this subject at the <a href="https://www.tu-dortmund.de/"
+                                    title="follow this link to get to the university's home page">technical university
+                                    of Dortmund</a>. After two challenging semesters, particularly in my private life I
+                                realised I wasn't that type of guy (god bless them) who loves to disassemble his own computer
+                                and build it from scratch by himself. I never felt like it and so I made a hard but
+                                necessary decision to quit.</p>
+                            <p>In the year I've spent there I've got taught about the Java programming language and the
+                                basics of software construction. Furthermore, I've passed a course which focused on
+                                computer structure and assembler programming.</p>
+                        </li>
+                        <li data-aos="fade">
+                            <dl>
+                                <dt>Doing my a levels</dt>
+                                <dd>2007 - 2015</dd>
+                            </dl>
+                            <p>Back in the good old days... Well, at that time it weren't the good days, were they? :)</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -228,7 +296,7 @@
                     <img src="resources/graphics/logo.png" width="70px" class="img-fluid" alt="logo">
                 </div>
             </div>
-        </div> 
+        </div>
         <div id="impressum" class="container">
             <div class="row">
                 <div class="col">
@@ -241,7 +309,7 @@
                         <dd>58454 Witten, Deutschland (Germany)</dd>
                         <dt>Mail</dt>
                         <dd>steffen.most@gmx.de</dd>
-                    </dl> 
+                    </dl>
                 </div>
             </div>
         </div>
@@ -267,6 +335,7 @@
 
     <!-- Own scripts -->
     <script src="resources/scripts/youtube.js"></script>
+    <script src="resources/scripts/preview-boxes.js#"></script>
 </body>
 
 </html>
