--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">About Me</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                     </ul>
                 </div>
@@ -139,6 +139,9 @@
                     <div class="text-content">
                         <div>
                             <h3 class="enable-animation">Web Development Blog</h3>
+                            <a href="#" class="enable-animation btn-an btn-1 small mt-2"> <svg class="enable-animation">
+                                    <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                                </svg>Preview</a>
                             <a href="#" class="enable-animation btn-an btn-1 mt-2"> <svg class="enable-animation">
                                     <rect x="0" y="0" fill="none" width="100%" height="100%" />
                                 </svg>Discover</a>
@@ -199,26 +202,30 @@
                 <div class="row">
                     <div class="offset-1 col-10">
                         <h2>Web Development Blog</h2>
+                        <p></p>
+                        <img src="resources/images/example.gif" class="img-fluid"
+                            alt="Animated part of the web dev blog">
 
                     </div>
                 </div>
             </div>
         </section>
 
+
         <!-- About -->
         <div id="about" class="container mt-5 pt-3" data-aos="fade-right">
             <div class="row">
-                <div class="col-12 col-md-7 col-lg-8" >
+                <div class="col-12 col-md-7 col-lg-8">
                     <h2>About Me</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum consequatur dolor voluptatibus
                         repellat sunt laborum cumque natus earum eaque accusantium excepturi quos amet, ipsum
                         repellendus maxime facere laboriosam possimus asperiores, laudantium dolorum sint! Aperiam
-                        reprehenderit quibusdam sunt tempore vel? Esse perferendis molestias cumque ipsa nam, eligendi
-                        magni provident quos, commodi dolorem aliquid quaerat autem pariatur harum. Ad facilis natus nam
-                        omnis fugiat nesciunt corporis ducimus ratione, exercitationem sequi totam, placeat eaque
-                        quisquam blanditiis. Laborum quia soluta nobis aut exercitationem eaque ipsa eius magni
-                        cupiditate officia incidunt, dolor iste perferendis eveniet adipisci ad deserunt nesciunt
-                        recusandae minus modi. Sequi, nisi perspiciatis.</p>
+                        reprehenderit quibusdam sunt tempore vel?</p>
+
+                    <h3>Contact</h3>
+                    <p>Feel free to contact me regarding any issues, questions or business requests. While beeing active
+                        on all my linked socials the best way to contact me is via my mail adress <a
+                            href="mailto:info@steveprojects.de" title="mail me">info@steveprojects.de</a>.</p>
                 </div>
                 <div class="col-12 col-md-5 col-lg-4 my-auto">
                     <img src="resources/images/profile.jpg" class="border-rounded img-fluid">
@@ -252,8 +259,12 @@
                         <li data-aos="fade">
                             <dl>
                                 <dt>Studying computer science and economics (B. Sc.)</dt>
-                                <dd>since August 2019</dd>
+                                <dd>since August 2016</dd>
                             </dl>
+                            <p>Immediately after quitting my previous study I've started a new chapter. Just half a mile
+                                away from the old campus the <a href="https://www.fh-dortmund.de/en/">University of
+                                    Applied Sciences of Dortmund</a> is located. Believing that this subject can provide
+                                me the best of both worlds, I've begun to start another study here.</p>
                             <p>Study contents: Economics, Java Development, Software Construction, Web Development,
                                 Marketing, (Cost) Accounting, Project Management</p>
                         </li>
@@ -262,10 +273,11 @@
                                 <dt>Studying computer science (B. Sc.)</dt>
                                 <dd>Aug 2015 - Aug 2016</dd>
                             </dl>
-                            <p>I did study this subject at the <a href="https://www.tu-dortmund.de/"
+                            <p>I did study this subject at the <a href="https://www.tu-dortmund.de/en"
                                     title="follow this link to get to the university's home page">technical university
                                     of Dortmund</a>. After two challenging semesters, particularly in my private life I
-                                realised I wasn't that type of guy (god bless them) who loves to disassemble his own computer
+                                realised I wasn't that type of guy (god bless them) who loves to disassemble his own
+                                computer
                                 and build it from scratch by himself. I never felt like it and so I made a hard but
                                 necessary decision to quit.</p>
                             <p>In the year I've spent there I've got taught about the Java programming language and the
@@ -277,7 +289,8 @@
                                 <dt>Doing my a levels</dt>
                                 <dd>2007 - 2015</dd>
                             </dl>
-                            <p>Back in the good old days... Well, at that time it weren't the good days, were they? :)</p>
+                            <p>Back in the good old days... Well, at that time it weren't the good days, were they? :)
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -290,26 +303,29 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <h2>Impressum</h2>
+                    <h2>Imprint</h2>
                 </div>
                 <div class="col-6 text-right">
                     <img src="resources/graphics/logo.png" width="70px" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
-        <div id="impressum" class="container">
+        <div id="imprint" class="container">
             <div class="row">
-                <div class="col">
-                    <dl>
-                        <dt>Autor</dt>
-                        <dd>Steffen Most</dd>
-                        <dt>Straße</dt>
-                        <dd>Dorneystraße 41</dd>
-                        <dt>Ort</dt>
-                        <dd>58454 Witten, Deutschland (Germany)</dd>
-                        <dt>Mail</dt>
-                        <dd>steffen.most@gmx.de</dd>
-                    </dl>
+                <div class="col-12 col-lg-2">
+                    <span>&copy; Steffen Most</span>
+                    <hr class="d-lg-none">
+                </div>
+                <div class="col-12 col-lg-10">
+                        <dl>
+                            <dt>Author</dt>
+                            <dd>Steffen Most</dd>
+                            <dt>Location</dt>
+                            <dd>58454 Witten, Germany</dd>
+                            <dt>Mail</dt>
+                            <dd>steffen.most@gmx.de</dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
         </div>
