Add contact form front-end

--- a/index.html
+++ b/index.html
@@ -211,6 +211,39 @@
             </div>
         </section>
 
+        <!-- Contact -->
+        <div id="contact" class="max-container my-7 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-5 pr-4 form-left">
+                        <h2>Kontaktieren Sie mich!</h2>
+                        <p>F&uuml;llen Sie dafür das Kontaktformular aus. Die mit * gekennzeichneten Felder sind dabei Pflichtfelder!</p>
+                    </div>
+                    <div class="col-12 offset-lg-1 col-lg-5 col-xl-4 pt-3">
+                        <form method="post" action="">
+                            <label for="fName">Vorname</label>
+                            <input id="fName" type="text" name="fName">
+                            <label for="lName">Nachname*</label>
+                            <input id="lName" type="text" name="lName" required>
+                            <label for="mail">Mail-Adresse*</label>
+                            <input id="mail" type="email" name="mail" required>
+                            <label for="subject">Betreff</label>
+                            <select id="subject" name="subject" required>
+                                <option>Gesch&auml;ftliche Anfrage</option>
+                                <option>Feedback</option>
+                                <option>Pers&ouml;nliche Frage</option>
+                                <option>Sonstiges</option>
+                            </select>
+                            <label for="message">Ihre Nachricht</label>
+                            <textarea id="message" name="message" rows="10" maxlength="2000" required></textarea>
+                            <div class="d-flex align-items-end mt-3">
+                                <button type="submit" class="btn-an btn-3">Formular absenden</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- About -->
         <div id="about" class="container mt-5 pt-3" data-aos="fade-right">
@@ -317,17 +350,17 @@
                     <hr class="d-lg-none">
                 </div>
                 <div class="col-12 col-lg-10">
-                        <dl>
-                            <dt>Author</dt>
-                            <dd>Steffen Most</dd>
-                            <dt>Location</dt>
-                            <dd>58454 Witten, Germany</dd>
-                            <dt>Mail</dt>
-                            <dd>steffen.most@gmx.de</dd>
-                        </dl>
-                    </div>
+                    <dl>
+                        <dt>Author</dt>
+                        <dd>Steffen Most</dd>
+                        <dt>Location</dt>
+                        <dd>58454 Witten, Germany</dd>
+                        <dt>Mail</dt>
+                        <dd>steffen.most@gmx.de</dd>
+                    </dl>
                 </div>
             </div>
+        </div>
         </div>
     </footer>
 
@@ -351,6 +384,7 @@
 
     <!-- Own scripts -->
     <script src="resources/scripts/youtube.js"></script>
+    <script src="resources/scripts/smooth-scrolling.js"></script>
     <script src="resources/scripts/preview-boxes.js#"></script>
 </body>
 
